# MagScope

./: .gitignore  AGENTS.md  BEAD_DATA_PLAN.md  CHANGELOG.md  Notes.txt  PLAN.md  README.md  RELEASE.md  UI-Redesign.md  UI_DEMO.py  UI_REDESIGN_GUIDELINES.md  agent.md  camera_egrabber.py  connect_motors.py  egrabber-24.01.2.71-py2.py3-none-any.whl  egrabber_camera_loader.py  example_script.py  fishel_scope_a.py  improved-data-saving-plan.md  main.py  main_dev.py  main_fishel.py  mkdocs.yml  motors_settings.yaml  panel_demo.py  pyproject.toml  requirements.from_old_venv.txt  requirements.txt  scope_config.py  settings.yaml  simulated_scope.py  video_viewer_demo.py
docs/: hardware.md  index.md  requirements.txt  scope.md  scripting.md  scripting_guide.rst
examples/: __init__.py  custom_hello.py  fake_linear_motor_scope.py  main_custom_script.py  main_fishel.py  main_fishel_lab.py
magscope/: __init__.py  _logging.py  app_icon.py  auto_bead_selection.py  beadlock.py  beads.py  camera.py  datatypes.py  default_settings.yaml  hardware.py  ipc.py  ipc_commands.py  main_dev.py  processes.py  python_microscope.py  scope.py  scripting.py  settings.py  startup_splash.py  tracking_data.py  utils.py  videoprocessing.py  zlut_generation.py
magscope_motors/: __init__.py  beadlock_ext.py  commands.py  control_panel.py  force_calibration.py  manager.py  safety.py
scripts/: test.ps1
tests/: conftest.py  test_agents_contract.py  test_app_icon.py  test_auto_bead_selection.py  test_beadlock.py  test_camera.py  test_doc_capture_gif_assembly.py  test_egrabber_camera_loader.py  (+26 more)
(+93 files in other folders)
